@@ -11,20 +11,20 @@ test_that("plot draws correctly", {
 	test_basic_plot <- function() plot(r)
 	# S100b
 	r <- r.s100b
-	vdiffr::expect_doppelganger("basic-s100b", test_basic_plot)
+	expect_doppelganger("basic-s100b", test_basic_plot)
 	
 	r <- r.ndka
-	vdiffr::expect_doppelganger("basic-ndka", test_basic_plot)
+	expect_doppelganger("basic-ndka", test_basic_plot)
 	
 	r <- r.wfns
-	vdiffr::expect_doppelganger("basic-wfns", test_basic_plot)
+	expect_doppelganger("basic-wfns", test_basic_plot)
 })
 
 test_that("legacy.axis works correctly", {
 	skip_if(getRversion() < 4.1)
 	r <- r.s100b
 	test_legacy.axis_plot <- function() plot(r, legacy.axes=TRUE)
-	vdiffr::expect_doppelganger("legacy.axes", test_legacy.axis_plot)
+	expect_doppelganger("legacy.axes", test_legacy.axis_plot)
 })
 
 test_that("Advanced screenshot 1 works correctly", {
@@ -47,7 +47,7 @@ test_that("Advanced screenshot 1 works correctly", {
 			 auc.polygon=TRUE, auc.polygon.col="#008600",
 			 max.auc.polygon=TRUE, max.auc.polygon.col="#00860022")
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.1", test_advanced_screenshot_1)
+	expect_doppelganger("advanced.screenshot.1", test_advanced_screenshot_1)
 })
 
 
@@ -70,7 +70,7 @@ test_that("Advanced screenshot 2 works correctly", {
 		plot(ciobj, type="shape", col="#1c61b6AA") # plot as a blue shape
 		plot(ci(rocobj, of="thresholds", thresholds="best", progress="none")) # add one threshold
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.2", test_advanced_screenshot_2)
+	expect_doppelganger("advanced.screenshot.2", test_advanced_screenshot_2)
 })
 
 
@@ -91,7 +91,7 @@ test_that("Advanced screenshot 3 works correctly", {
 		
 		legend("bottomright", legend = c("Empirical", "Binormal", "Density", "Fitdistr\n(Log-normal)"), col = c("black", "#1c61b6", "#008600", "#840000"),lwd = 2)
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.3", test_advanced_screenshot_3)
+	expect_doppelganger("advanced.screenshot.3", test_advanced_screenshot_3)
 })
 
 
@@ -114,7 +114,7 @@ test_that("Advanced screenshot 4 works correctly", {
 		plot(ci.sp(rocobj, sensitivities=seq(0, 100, 5), progress = "none"), # ci of specificity
 			 type="bars") # print this one as bars
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.4", test_advanced_screenshot_4)
+	expect_doppelganger("advanced.screenshot.4", test_advanced_screenshot_4)
 })
 
 
@@ -134,7 +134,7 @@ test_that("Advanced screenshot 5 works correctly", {
 				 print.thres="best", # also highlight this threshold on the plot
 				 progress = "none") # hide progress bar
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.5", test_advanced_screenshot_5)
+	expect_doppelganger("advanced.screenshot.5", test_advanced_screenshot_5)
 })
 
 
@@ -147,7 +147,7 @@ test_that("Advanced screenshot 6 works correctly", {
 		text(50, 50, labels=paste("p-value =", format.pval(testobj$p.value)), adj=c(0, .5))
 		legend("bottomright", legend=c("S100B", "NDKA"), col=c("#1c61b6", "#008600"), lwd=2)
 	}
-	vdiffr::expect_doppelganger("advanced.screenshot.6", test_advanced_screenshot_6)
+	expect_doppelganger("advanced.screenshot.6", test_advanced_screenshot_6)
 })
 
 
@@ -158,6 +158,6 @@ test_that("plot and lines work with formula and subset", {
 		lines.roc(outcome ~ ndka, data = aSAH)
 		lines.roc(outcome ~ ndka, data = aSAH, subset = gender == "Male", col="blue")
 	}
-	vdiffr::expect_doppelganger("plot_formula", test_plot_formula)
+	expect_doppelganger("plot_formula", test_plot_formula)
 })
 
